[FIX] Correção no envio de arquivos e no problema de CORS
- Corrigido erro que impedia o envio de um arquivo único corretamente.
- Removido a propriedade de limpar todos os arquivos ao adicionar um novo
- Ajustado problema nos headers do CORS para permitir  X-private- key em requisições.